--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@
 spring.datasource.url=jdbc:mysql://localhost/games
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.password=1234
+spring.datasource.password=mysql
+
 
 # =======================================================================================
 # Setting logging level
