tetris implemented (although size has to be changed), registration seems to work on my computer now as well

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,8 @@
 spring.datasource.url=jdbc:mysql://localhost/games
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=mysql
 
-# =======================================================================================
 # Setting logging level
 # more info on levels in: https://www.tutorialspoint.com/log4j/log4j_logging_levels.htm
 # set root level for logging to INFO (n.b. the dot after logging.level is no typo)
@@ -14,7 +13,6 @@ logging.level.=INFO
 # logging.level.=DEBUG
 # heel veel extra info voor debugging
 
-# =======================================================================================
 # Settings for JPA
 spring.jpa.database_platform=org.hibernate.dialect.MySQL5Dialect
 
