--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:mysql://localhost/games
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mysql
 
 # Setting logging level
 # more info on levels in: https://www.tutorialspoint.com/log4j/log4j_logging_levels.htm
@@ -19,7 +19,8 @@ spring.jpa.database_platform=org.hibernate.dialect.MySQL5Dialect
 # The setting below determines what must be done each with tables in database each time
 #   this application is started
 # options for spring.jpa.hibernate.ddl-auto: none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
 
 #please show the sql so I know what happens around here
 spring.jpa.show-sql=false
