--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.jpa.database_platform=org.hibernate.dialect.MySQL5Dialect
 # The setting below determines what must be done each with tables in database each time
 #   this application is started
 # options for spring.jpa.hibernate.ddl-auto: none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-update
 
 
