--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:mysql://localhost/games
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=1234
 
 
 # Setting logging level
