--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:mysql://localhost/games
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=
 
 # Setting logging level
 # more info on levels in: https://www.tutorialspoint.com/log4j/log4j_logging_levels.htm
@@ -20,8 +20,8 @@ spring.jpa.database_platform=org.hibernate.dialect.MySQL5Dialect
 #   this application is started
 # options for spring.jpa.hibernate.ddl-auto: none, validate, update, create, create-drop
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 #please show the sql so I know what happens around here
